# triton-server

./: .gitignore  Dockerfile  README.md  commanline.txt  docker-compose.yml  requirements.txt  test.py
BatchedNmsExtendLandmark/: CMakeLists.txt  commandline.txt  gatherNMSCustomOutputs.cu
infer/: infer_face.py  infer_person.py
inference/: batch_result_clean.json  infer.py  infer2.py  infer_optimized.py
inference/client/: face_alignment.py  face_detection.py  face_mask.py  person_detection.py
inference/common/: triton_base.py
inference/inference/: face_features_output.json  infer2.py
inference/inference/client/: face_detection.py  (+2 more)
mask_detection/: cv_onnx.py  infer.py  split_dataset.py  train.py
models/person_detection/: config.pbtxt
models/person_detection_ensemble/: config.pbtxt
models/person_detection_postprocess/: config.pbtxt  config_trt.pbtxt
models/person_detection_preprocess/: config.pbtxt
models/person_detection_with_pre/: config.pbtxt
models_face_optimizer/dali_face_detection_preprocess/: config.pbtxt
models_face_optimizer/face_alignment/: BUILD_CUDA12.md  CMakeLists.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  README_BUILD.md  TECHNICAL_ANALYSIS.md  benchmark.py  config.pbtxt
models_face_optimizer/face_alignment/1/: model.py
models_face_optimizer/face_alignment/include/: affine_transform.h
models_face_optimizer/face_alignment/src/: face_alignment_backend.cc  face_alignment_kernel.cu
models_face_optimizer/face_alignment_op/: config.pbtxt
models_face_optimizer/face_alignment_pytorch/: config.pbtxt  face_alignment_gpu.py  model.py
(+41 files in other folders)
